--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background: var(--bs-gray-900);color: var(--bs-light);margin-bottom: 10px;">
         <div class="container"><a class="navbar-brand" href="#">CRUD with NodeJs</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(255,255,255);">
@@ -171,8 +170,15 @@
     crossorigin="anonymous"></script>
 
     <!--Js-->
-    <script src="js/main.js"></script>
-    <script src="js/events.js"></script>
+    <!--<script src="js/main.js"></script>-->
+    <!--<script src="js/events.js"></script>-->
+
+    <!--MVC-->
+    <script src="js/controller/customer.controller.js"></script>
+    <script src="js/view/customer.view.js"></script>
+    <script src="js/model/customer.model.js"></script>
+    
+    
 
     <!--Bootstrap-->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
