Migracion completa a Typescript

--- a/client/index.html
+++ b/client/index.html
@@ -174,12 +174,8 @@
     <!--<script src="js/events.js"></script>-->
 
     <!--MVC-->
-    <script src="js/controller/customer.controller.js"></script>
-    <script src="js/view/customer.view.js"></script>
-    <script src="js/model/customer.model.js"></script>
+    <script src="dist/app.js"></script>
     
-    
-
     <!--Bootstrap-->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
